src/scss/theme/components/_button.scss
// ------ #BUTTONS BLOCK
.wp-block-button[class] {
    display: flex;
    background: none;
    @include button-props;

    &:not(.is-style-text) {

      &:where([class*="sm-variation"]) {
        --theme-button-text-color: var(--sm-current-fg1-color);
        --theme-button-background-color: var(--sm-current-bg-color);
        --theme-button-border-color: var(--sm-current-bg-color);

        --theme-button-hover-text-color: var(--sm-current-bg-color);
        --theme-button-hover-background-color: transparent;
        --theme-button-hover-border-color: var(--sm-current-bg-color);

        html.is-dark & {
          --theme-button-text-color: var(--sm-current-bg-color);
          --theme-button-background-color: var(--sm-current-accent-color);
          --theme-button-border-color: var(--sm-current-accent-color);
          --theme-button-hover-text-color: var(--sm-current-accent-color);
          --theme-button-hover-background-color: transparent;
          --theme-button-hover-border-color: var(--sm-current-accent-color);
        }
      }
    }

    &:not([class*="is-style"]) .wp-block-button__link {
        &:not(.has-background) {
            @include button-fill;
        }
    }

    &.is-style-primary .wp-block-button__link[class] {
        @include button-fill;
    }

    &.is-style-secondary .wp-block-button__link[class] {
        @include button-fill-reverse;
    }

    &.is-style-text {

        .wp-block-button__link {
            @include button-reset;
            @include button-text;

            --theme-button-text-color: var(--sm-current-accent-color);
            --theme-button-hover-text-color: var(--sm-current-accent-color);
        }

        &:where([class*="sm-variation"]) .wp-block-button__link {
            --theme-button-text-color: var(--sm-current-bg-color);
            --theme-button-hover-text-color: var(--sm-current-bg-color);

            html.is-dark & {
                --theme-button-text-color: var(--sm-current-accent-color);
                --theme-button-hover-text-color: var(--sm-current-accent-color);
            }
        }
    }
}

:is(.wp-block-button__link, .specificity.x2.x3) {
    // Always center the text inside the button, including when using Custom Width 
    // settings and the link container is larger than the text itself.
    text-align: center; 

    @include button-transition;
    @include button-base;
    @include button-box;
    @include button-color;
    @include apply-font(button);
    @extend %apply-font-properties; // Overwrite the inline font-size of 1.125em

    @include specific(3) {

        @each $name, $color in $sm-color-classnames {

            &.has-#{$name}-background-color {
                background-color: transparent !important;
                --theme-button-background-color: #{$color};
                --theme-button-border-color: #{$color};
                --theme-button-hover-background-color: transparent;
                --theme-button-hover-border-color: #{$color};
                --theme-button-hover-text-color: #{$color};
            }

            &.has-#{$name}-color {
                color: var(--current-button-text-color) !important;
                --theme-button-hover-text-color: var(--theme-button-background-color);
                --theme-button-text-color: #{$color};
            }
        }
    }
}

.button--small {
    @include button-small;
}

.button--large {
    @include button-large;
}

.button--huge {
    @include button-huge;
}

